fixed description overflow (missing width styles upstream)

--- a/pages/projects/index.module.scss
+++ b/pages/projects/index.module.scss
@@ -39,6 +39,7 @@
     display: flex;
     flex-direction: column;
     flex-basis: 50vw;
+    width: 100%;
 }
 
 .projectCard:hover {
@@ -76,6 +77,7 @@
     display: flex;
     flex-wrap: wrap;
     float: inline-start;
+    margin-top: .6rem;
 }
 
 .offsiteLinks a {}
@@ -152,10 +154,16 @@
     margin-top: 1rem;
 }
 
+#header .descCont {
+}
+
 #header .description {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-break: break-all;
     font-size: 1.3rem;
-    margin-top: 1rem;
-    width: 100%;
+    margin: 1rem 0 .6rem;
 }
 
 .tagsCard {
@@ -221,6 +229,14 @@
         flex-direction: row;
         flex-basis: 100vw;
         justify-content: space-between;
+    }
+
+    .descCont {
+        min-height: 1px;
+    }
+
+    #header .description {
+        width: 100%;
     }
 
     // don't squash last push
